arabic-form-text-alignment-issue-fix

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
@@ -869,6 +869,15 @@
         .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
             padding-top: 23px;
         }
+
+        .page-government-documents .mainSection-header .serviceTime{
+            position: relative;
+            top: -15px;
+        }
+        .form-condition-spl-notes {
+            font-size: 14px !important;
+            margin-bottom: 7px !important;
+        }
         
        
 
@@ -3019,6 +3028,16 @@
         .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
             padding-top: 23px;
            
+        }
+        
+        .page-government-documents .mainSection-header .serviceTime{
+            position: relative;
+            top: -15px;
+        }
+
+        .form-condition-spl-notes {
+            font-size: 14px !important;
+            margin-bottom: 7px !important;
         }
     
                 /********/
@@ -5281,6 +5300,16 @@
     .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
         padding-top: 23px;
        
+    }
+
+    
+    .page-government-documents .mainSection-header .serviceTime{
+        position: relative;
+        top: -15px;
+    }
+    .form-condition-spl-notes {
+        font-size: 14px !important;
+        margin-bottom: 7px !important;
     }
 
 
